metadata/force-app/main/default/objects/CustomName_azADo__c/CustomName_azADo__c.object-meta.xml
<CustomObject>
    <description>Description_DzGzG</description>
    <label>CustomLabel_aKfys</label>
    <nameField>
        <label>CustomLabel_aKfys</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_aKfyss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>