metadata/force-app/main/default/objects/CustomName_azADo__c/fields/CustomField_AXgvG__c.field-meta.xml
<CustomField>
    <fullName>CustomField_AXgvG__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldHbLxT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>