metadata/force-app/main/default/objects/CustomName_azADo__c/fields/CustomField_nvpgg__c.field-meta.xml
<CustomField>
    <fullName>CustomField_nvpgg__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldleSnD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>